fix: barber stuck with same client, feat: change all virtual threads back to normal threads, test: leave it running without sleep between cuts and payment